objects/FieloCH__Challenge__c.object
<CustomObject>
    <customHelpPage>FieloCH__ChallengeHelpBackend</customHelpPage>
    <fields>
        <fullName>FieloCH__AcomplishAction__c</fullName>
        <label>Accomplish Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__CompetitionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Finish</fullName>
                    <default>true</default>
                    <label>Finish</label>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
                <value>
                    <fullName>Continue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__AttachmentId__c</fullName>
        <description>The Id of the attach record</description>
        <label>PictureId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the &quot;father&quot; on a series.</description>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__CompetitionType__c</fullName>
        <description>If Challenge is competition type, Defines if is by performance, by time or by objective that completes challenge</description>
        <inlineHelpText>-Objective:  Each member that accomplishes the challenge wins
-Time: Its a race time, wins the first member that completes the challenge
-Performance: It’s a competition by value, the member with best performance  wins challenge</inlineHelpText>
        <label>Competition Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Objective</fullName>
                    <default>true</default>
                    <label>Objective</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__DaysLeft__c</fullName>
        <formula>FieloCH__FinalDate__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloCH__FinalDate__c</fullName>
        <description>Day until the challenge is valid</description>
        <label>Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__InitialDate__c</fullName>
        <description>Day since the challenge is valid</description>
        <label>Initial Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__InjectBadgeIds__c</fullName>
        <label>Inject BadgeIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__MissionsCounter__c</fullName>
        <label>Mission Counter</label>
        <summaryForeignKey>FieloCH__MissionChallenge__c.FieloCH__Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloCH__Mode__c</fullName>
        <description>The mode define if the missions are  a competition between members or a collaborative mission between all the challenge community.</description>
        <inlineHelpText>Select Competition if you want to create a challenge to each member or Collaborative if you want to create a single mission that will be accomplish by the hole challenge community.</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                    <default>true</default>
                    <label>Competition</label>
                </value>
                <value>
                    <fullName>Collaborative</fullName>
                </value>
                <value>
                    <fullName>Teams</fullName>
                </value>
                <value>
                    <fullName>Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Objects__c</fullName>
        <label>Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FieloEE__Event__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__Transaction__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__BadgeMember__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Picture__c</fullName>
        <formula>IF( NOT( ISBLANK(FieloCH__AttachmentId__c) ), IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+FieloCH__AttachmentId__c, Name, 60, 60),  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceAutoSubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy subscription list from previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceDayOfMonth__c</fullName>
        <label>RecurrenceDayOfMonth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceInstance__c</fullName>
        <label>RecurrenceInstance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                    <default>true</default>
                    <label>1st</label>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceInterval__c</fullName>
        <label>Recurrence Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceType__c</fullName>
        <label>RecurrenceType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RecursDaily</fullName>
                </value>
                <value>
                    <fullName>RecursEveryWeekday</fullName>
                </value>
                <value>
                    <fullName>RecursWeekly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthlyNth</fullName>
                </value>
                <value>
                    <fullName>RecursYearly</fullName>
                </value>
                <value>
                    <fullName>RecursYearlyNth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checks if the members can participate again although it has won the challenge.</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RewardCounter__c</fullName>
        <label>Reward Counter</label>
        <summaryForeignKey>FieloCH__ChallengeReward__c.FieloCH__Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <formula>IF(  ! FieloCH__IsActive__c, &quot;Inactive&quot;,
  IF ( FieloCH__FinalDate__c &lt; TODAY() || (ISPICKVAL(FieloCH__CompetitionType__c,&apos;Performance&apos;) &amp;&amp; FieloCH__Processed__c)
            || (ISPICKVAL(FieloCH__Mode__c,&apos;Collaborative&apos;) &amp;&amp; FieloCH__Processed__c), &quot;Finished&quot;,
    IF (FieloCH__InitialDate__c &lt;= TODAY() &amp;&amp; FieloCH__FinalDate__c &gt;= TODAY() , &quot;Active&quot;, &quot;Future&quot; ) ) )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeAutomatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeFrom__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeTo__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__Subscription__c</fullName>
        <inlineHelpText>- Open: By subscription, any member can subscribe.
- Closed: Without subscription, Administrator subscribes the members</inlineHelpText>
        <label>Subscription Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__TableType__c</fullName>
        <label>Position Table Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__CompetitionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Position Ranking</fullName>
                </value>
                <value>
                    <fullName>Value Ranking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If is mark as not visible the members of challenge do not know that are in the challenge until win.</inlineHelpText>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onFriday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onMonday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onSaturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onSunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onThursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onTuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onWednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Challenge</label>
    <listViews>
        <fullName>FieloCH__Active_Challenges</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__Challenge__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>FieloCH__Subscription__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>FieloCH__SubscribeFrom__c</columns>
        <columns>FieloCH__MissionsCounter__c</columns>
        <columns>FieloCH__Status__c</columns>
        <columns>FieloCH__Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloCH__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Challenges</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloCH__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>FieloCH__Picture__c</columns>
        <columns>NAME</columns>
        <columns>FieloCH__Challenge__c</columns>
        <columns>FieloCH__Program__c</columns>
        <columns>FieloCH__InitialDate__c</columns>
        <columns>FieloCH__FinalDate__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>FieloCH__Status__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloCH__Escalabilidad</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__Objects__c</columns>
        <columns>FieloCH__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Escalabilidad</value>
        </filters>
        <label>Escalabilidad</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <recordTypes>
        <fullName>FieloCH__Series</fullName>
        <active>true</active>
        <label>Series</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__Single</fullName>
        <active>true</active>
        <label>Single</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloCH__Active_Challenge</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCH__IsActive__c &amp;&amp;  (FieloCH__MissionsCounter__c == 0 || FieloCH__RewardCounter__c == 0)</errorConditionFormula>
        <errorMessage>Can&apos;t Activate a Challenge without a mission or reward</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Competition_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( FieloCH__CompetitionType__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Competition Type is Required when Mode is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Challenge_Competition</fullName>
        <active>true</active>
        <description>If the competition type is modified, check that is has no missions associated.</description>
        <errorConditionFormula>IF( AND(FieloCH__MissionsCounter__c &gt; 0,   ISCHANGED(FieloCH__CompetitionType__c) ), true, false)</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Cannot change Competition Type if already have missions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Challenge_Mode</fullName>
        <active>true</active>
        <description>Check if it has missions or members associated in order to let the user modify the challenge.</description>
        <errorConditionFormula>IF( AND( FieloCH__MissionsCounter__c &gt; 0, ISCHANGED( FieloCH__Mode__c ) ), true, false)</errorConditionFormula>
        <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
        <errorMessage>Cannot change Mode if already have missions or community associated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Competition_Type</fullName>
        <active>true</active>
        <description>Check if it has rewards associated.</description>
        <errorConditionFormula>AND(If( FieloCH__RewardCounter__c &gt; 0, true, false ) , ISCHANGED(FieloCH__CompetitionType__c))</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Cannot modified Competition Type if you had associated rewards. Go to &quot;Manage Rewards&quot;  and delete them first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Final_Date_After_Initial_Date</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCH__InitialDate__c &gt;  FieloCH__FinalDate__c</errorConditionFormula>
        <errorMessage>Initial Date must be before Final Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Mode_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FieloCH__Mode__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
        <errorMessage>Mode must be selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Program_Required</fullName>
        <active>true</active>
        <description>Checks that the challenge has a program when is edited.</description>
        <errorConditionFormula>AND(NOT( ISNEW() ), OR(ISNULL( FieloCH__Program__c ), ISBLANK(FieloCH__Program__c) ) )</errorConditionFormula>
        <errorDisplayField>FieloCH__Program__c</errorDisplayField>
        <errorMessage>The Challenge must belong to a Program.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Recurrence_Type_Valid</fullName>
        <active>true</active>
        <description>Check that the Recurrence Type choosen is valid for the Mode and for the Competition Type</description>
        <errorConditionFormula>AND(
    OR( ISPICKVAL( FieloCH__CompetitionType__c , &quot;Performance&quot;), ISPICKVAL(  FieloCH__CompetitionType__c , &quot;Time&quot;)),
    FieloCH__Repeatable__c = TRUE
)</errorConditionFormula>
        <errorMessage>Repeatable is valid only for Objective Competition Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Subscription_Mode_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FieloCH__Subscription__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>FieloCH__Subscription__c</errorDisplayField>
        <errorMessage>Subscription Mode is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Subscription_Period</fullName>
        <active>true</active>
        <description>Check that the period define for subscription is not greater than the duration of the Challenge</description>
        <errorConditionFormula>FieloCH__SubscribeTo__c &gt; FieloCH__FinalDate__c</errorConditionFormula>
        <errorDisplayField>FieloCH__SubscribeTo__c</errorDisplayField>
        <errorMessage>Subscription period Final Date cannot be greater than Challenge Final Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Subscription_Period_Valid_Date</fullName>
        <active>true</active>
        <description>Check that the period is the same or before from the Active period of the Challenge.</description>
        <errorConditionFormula>AND( NOT( OR( ISBLANK(FieloCH__SubscribeFrom__c), ISNULL(FieloCH__SubscribeFrom__c) )),
OR( FieloCH__InitialDate__c &lt;  FieloCH__SubscribeFrom__c, FieloCH__SubscribeFrom__c &gt;  FieloCH__SubscribeTo__c ))</errorConditionFormula>
        <errorDisplayField>FieloCH__SubscribeFrom__c</errorDisplayField>
        <errorMessage>The Subscription Initial Date cannot be greater than Subscription Final Date or greater than Challenge Initial Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Visibility_False_for_Subscription_Close</fullName>
        <active>true</active>
        <description>When the subscription is closed, the visibility must be false so it wont be shown.</description>
        <errorConditionFormula>AND( ISPICKVAL( FieloCH__Subscription__c  , &apos;Open&apos;),  NOT(FieloCH__Visible__c)  )</errorConditionFormula>
        <errorDisplayField>FieloCH__Visible__c</errorDisplayField>
        <errorMessage>If Subscription Mode is Open then visibility must be checked.</errorMessage>
    </validationRules>
</CustomObject>